fix menu alignment

--- a/style.css
+++ b/style.css
@@ -1565,6 +1565,14 @@ p {
     margin-top: 0px;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:ml-4 {
+    margin-left: 1rem;
+  }
+
   .md\:block {
     display: block;
   }
